--- a/index.html
+++ b/index.html
@@ -2,19 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>CleanFlow - Dry Cleaning Management</title>
+    <title>LaundryOS - Dry Cleaning Management</title>
     <meta name="description" content="Modern dry cleaning and laundry management system for businesses" />
-    <meta name="author" content="CleanFlow" />
+    <meta name="author" content="LaundryOS" />
 
-    <meta property="og:title" content="CleanFlow - Dry Cleaning Management" />
+    <meta property="og:title" content="LaundryOS - Dry Cleaning Management" />
     <meta property="og:description" content="Modern dry cleaning and laundry management system for businesses" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
   </head>
 
   <body>
